added new features in the farmers dashboard

--- a/harvestsaver/farm/templates/farm/farm/chackout.html
+++ b/harvestsaver/farm/templates/farm/farm/chackout.html
@@ -94,6 +94,7 @@ HarvestSaver – Checkout
 
                             <!-- ROUTE -->
                             <div class="row g-3 mb-1">
+                                {%comment%}
                                 <div class="col-md-6">
                                     <label class="form-label fw-bold text-primary">
                                         Pickup From (Farm Location)
@@ -106,6 +107,7 @@ HarvestSaver – Checkout
                                         required
                                     >
                                 </div>
+                                {%endcomment%}
 
                                 <div class="col-md-6">
                                     <label class="form-label fw-bold text-success">
