improved the fsrmer dashboard.

--- a/harvestsaver/accounts/templates/accounts/register.html
+++ b/harvestsaver/accounts/templates/accounts/register.html
@@ -111,56 +111,7 @@
                       <div class="col-md-12">
                         <select class="select form-control-lg" name="country" required >
                           <option value="" disabled selected>Choose Country</option>
-                          <option value="kenya">kenya</option>
-                          {%comment%}
-                          <option value="algeria">Algeria</option>
-                          <option value="angola">Angola</option>
-                          <option value="benin">Benin</option>
-                          <option value="botswana">Botswana</option>
-                          <option value="burkina Faso">Burkina Faso</option>
-                          <option value="burudi">Burudi</option>
-                          <option value="cabo verde">Cabo verde</option>
-                          <option value="cameroon">Cameroon</option>
-                          <option value="chad">Chad</option>
-                          <option value="comoros">Comoros</option>
-                          <option value="cote d'lvoire">Cote d'lvoire</option>
-                          <option value="djiboute">Djiboute</option>
-                          <option value="egypt">Egypt</option>
-                          <option value="equatorial guinea">Equatorial Guinea</option>
-                          <option value="Eritrea">Eritrea</option>
-                          <option value="ethiopia">Ethiopia</option>
-                          <option value="gabon">Gabon</option>
-                          <option value="gambia">Gambia</option>
-                          <option value="ghana">Ghana</option>
-                          <option value="Guinea">Guinea</option>
-                          <option value="lesotho">Lesotho</option>
-                          <option value="liberia">Liberia</option>
-                          <option value="libya">Libya</option>
-                          <option value="madagascar">Madagascar</option>
-                          <option value="malawi">Malawi</option>
-                          <option value="mali">Mali</option>
-                          <option value="mauritania">Mauritania</option>
-                          <option value="mauritius">Mauritius</option>
-                          <option value="morocco">Morocco</option>
-                          <option value="mozambique">Mozambique</option>
-                          <option value="namibia">Namibia</option>
-                          <option value="niger">Niger</option>
-                          <option value="nigeria">Nigeria</option>
-                          <option value="rwanda">Rwanda</option>
-                          <option value="senegal">senegal</option>
-                          <option value="seychelles">Seychelles</option>
-                          <option value="sierra leone">Sierra Leone</option>
-                          <option value="somalia">Somalia</option>
-                          <option value="south africa">South Africa</option>
-                          <option value="south sudan">South Sudan</option>
-                          <option value="sudan">sudan</option>
-                          <option value="tanzania">Tanzania</option>
-                          <option value="togo">Togo</option>
-                          <option value="tunisia">Tunisia</option>
-                          <option value="uganda">Uganda</option>
-                          <option value="zambia">Zambia</option>
-                          <option value="zimbabwe">Zimbabwe</option>
-                          {%endcomment%}
+                          <option value="KE" selected>Kenya</option>
                         </select>
                       </div>
                   </div>
