--- a/harvestsaver/farm/templates/farm/farm/products.html
+++ b/harvestsaver/farm/templates/farm/farm/products.html
@@ -1,6 +1,7 @@
+{%comment%}products page{%endcomment%}
 <div class="row g-3">
-    {% for product in products %}
-    <div class="col-md-4 data-aos="fade-up" data-aos-delay="100"">
+    {% for product in page_object %}
+    <div class="col-md-3 mb-2 data-aos="fade-up" data-aos-delay="100"">
         <div class="card h-100 shadow-sm">
 
             <!-- Image -->
