--- a/harvestsaver/farm/templates/farm/farm/all_products.html
+++ b/harvestsaver/farm/templates/farm/farm/all_products.html
@@ -17,7 +17,7 @@ HarvestSaver Nextwork - Product
       <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             {% if page_object.has_previous %}
-            <li class="page-item"><a class="page-link" href="?page=1">1</a></a></li>
+            <li class="page-item"><a class="page-link" href="?page=1">1</a></li>
           <li class="page-item">
             <a class="page-link" href="?page={{ page_object.previous_page_number }}"
             tabindex="-1" aria-disabled="true" >previous</a>
@@ -30,7 +30,7 @@ HarvestSaver Nextwork - Product
           <li class="page-item">
             <a class="page-link" href="?page={{ page_object.next_page_number }}">Next</a>
           </li>
-          <lic class="page-item">
+          <li class="page-item">
             <a class="page-link" href="?page={{ page_object.paginator.num_pages }}">last &raquo;</a>
           </li>
           {%endif%}
